<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>saturated_gyro_speed_estimation</name>
  <version>0.0.1</version>
  <description>Repository containing our ROS package allowing to estimate body angular velocities under saturated gyroscope measurements.</description>
  <maintainer email="simon-pierre.deschenes.1@ulaval.ca">Simon-Pierre Deschênes</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>steam</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
